# pygeofilter-duckdb

./: .gitignore  README.md  pyproject.toml
example/: 01-Create a geoparquet with STAC Items.ipynb  02-Create a geoparquet file.ipynb  03-DuckDB and geoparquet.ipynb  04-RemoteQuery-STAC-Geoparquet.ipynb  Query-STAC-Geoparquet.ipynb  my_tests.ipynb
example/data-files/items/: S2A_10TFK_20220524_0_L2A.json  S2B_10TFK_20210713_0_L2A.json
src/pygeofilter_duckdb/: __about__.py  __init__.py  evaluate.py
src_/pygeofilter/backends/duckdb/: __init__.py
tests/: test_duckdb.py
