[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygeofilter-duckdb"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Fabrice Brito", email = "fabrice.brito@terradue.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "pygeofilter>= 0.2.4",
  "duckdb>=0.2.0",
  "shapely",
  "duckdb<1.2.0",
  "pystac_client",
  "stac-geoparquet",
  "pytest",
]

[project.urls]
Documentation = "https://github.com/Fabrice Brito/pygeofilter-duckdb#readme"
Issues = "https://github.com/Fabrice Brito/pygeofilter-duckdb/issues"
Source = "https://github.com/Fabrice Brito/pygeofilter-duckdb"

[tool.hatch.version]
path = "src/pygeofilter_duckdb/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/pygeofilter_duckdb tests}"

[tool.coverage.run]
source_pkgs = ["pygeofilter_duckdb", "tests"]
branch = true
parallel = true
omit = [
  "src/pygeofilter_duckdb/__about__.py",
]

[tool.coverage.paths]
pygeofilter_duckdb = ["src/pygeofilter_duckdb", "*/pygeofilter-duckdb/src/pygeofilter_duckdb"]
tests = ["tests", "*/pygeofilter-duckdb/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
